--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,11 @@ html {
 
 :root {
     --color-top: #98DDCA;
-    --color-mid: #D5ECC2;
+    --color-mid:  rgb(213,236,194);
     --color-bot: #FFD3B4;
     --color-footer: #FFAAA7;
+
+    --color-letra: #ffbb6e;
 
     --font-logo: 'Fasthand';
 }
@@ -41,12 +43,16 @@ html {
 
 .logo .title-logo {
     display: inline-flex;
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: var(--font-logo);
     align-items: center;
     margin-left: 0;
     text-decoration: none;
-    margin-top: 25px;
+    margin-top: 18px;
+    font-weight: bold;
+    color: var(--color-letra);
+    text-shadow: -3px 3px 7px rgb(0 0 0);
+
     
 }
 .login-user {
@@ -64,7 +70,7 @@ html {
     justify-content: center;
     align-items: center;
     margin-top: 12px;
-    border: 1px solid orange;
+    border: 2px solid orange;
     border-radius: 50px;
     width: 400px;
     height: 45px;;
@@ -97,7 +103,7 @@ html {
 .atajos {
     width: 100%;
     height: 60px;
-    background-color: #D5ECC2;
+    background-color: var(--color-mid);
 
 }
 .atajos ul {
@@ -120,9 +126,15 @@ html {
     width: 160px;;
     align-items: center;
     justify-content: center;
-    border: solid 1px orange;
+    border: solid 2px orange;
     border-radius: 20px;;
-    color: #551a8b;
+    color: var(--color-letra);
+    background-color: white;
+    /* box-shadow: 0px 0px 20px 6px rgba(213,236,194,1) inset;
+-webkit-box-shadow: 0px 0px 20px 6px rgba(213,236,194,1) inset;
+-moz-box-shadow: 0px 0px 20px 6px rgba(213,236,194,1) inset; */
+
+    
 }
 
 .section-top {
@@ -131,6 +143,7 @@ html {
     /* background-color: var(--color-top); */
     background-image: url('../css/assets/img/healthy-food-choices.jpg');
     background-repeat: no-repeat;
+    background-size: cover;
     margin: 10px auto;
     border-radius: 50px;;
     border: 2px solid  #ffa500;
@@ -151,18 +164,23 @@ html {
     text-decoration: none;
     color: black;
 }
-.section-top h2 {
+/* .section-top h2 {
     font-size: 3.5rem;
     width: 700px;
     margin: 0 auto;
-}
+} */
 
 .section-top p {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 600;
     width: 700px;
     margin: 40px auto;
-    
+    background-color: orange;
+    border-radius: 15px;
+    text-align: center;
+    box-shadow: -1px 1px 7px 7px rgba(0,0,0,0.75);
+-webkit-box-shadow: -1px 1px 7px 7px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 1px 7px 7px rgba(0,0,0,0.75);
 }
 .arrow-right img{
    width: 50px;
@@ -307,4 +325,23 @@ html {
     justify-content: center;
     margin-top: 20px;
     overflow: hidden;
+}
+
+.tip-1 {
+    width: 250px;
+    height: 300px;
+    background-image: url(./assets/img/como-cocer-arroz-blanco-en-su-punto.jpg.webp);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 15px;
+}
+.tip-2 {
+    width: 250px;
+    height: 300px;
+    background-image: url(./assets/img/flame.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 15px;
 }
